--- a/packages/ia-activity-indicator/package.json
+++ b/packages/ia-activity-indicator/package.json
@@ -1,60 +1,65 @@
 {
   "name": "@internetarchive/ia-activity-indicator",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Webcomponent ia-activity-indicator following open-wc recommendations",
   "author": "ia-activity-indicator",
   "license": "MIT",
-  "main": "index.js",
-  "module": "index.js",
-  "files": [
-    "src/**/*",
-    "index.js",
-    "ia-activity-indicator.js"
-  ],
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
-    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "npm run lint && karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "storybook": "start-storybook --node-resolve --watch --open",
-    "storybook:build": "build-storybook"
+    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds --app-index demo/index.html --node-resolve --open --watch --preserve-symlinks\"",
+    "build": "tsc",
+    "prepare": "rimraf dist && tsc",
+    "lint": "eslint . && prettier \"**/*.ts\" --check",
+    "format": "eslint . --fix && prettier \"**/*.ts\" --write",
+    "circular": "madge --circular --extensions ts .",
+    "test": "tsc && npm run lint && npm run circular && wtr --coverage --node-resolve dist/test/**/*.test.js",
+    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
+    "ghpages:build": "rimraf ghpages && npm run prepare && vite build",
+    "ghpages:publish": "npm run ghpages:prepare -e $(git branch --show-current)",
+    "ghpages:prepare": "npm run ghpages:build && touch ghpages/.nojekyll && npm run ghpages:generate",
+    "ghpages:generate": "gh-pages -t -d ghpages -m \"Build for $(git log --pretty=format:\"%h %an %ai %s\" -n1) [skip ci]\""
   },
   "dependencies": {
-    "lit": "^2.2.2"
+    "lit": "^2.8.0"
   },
   "devDependencies": {
-    "@open-wc/demoing-storybook": "^1.0.1",
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/prettier-config": "^0.1.10",
-    "@open-wc/testing": "^2.0.0",
-    "@open-wc/testing-karma": "^3.0.0",
-    "deepmerge": "^3.2.0",
-    "es-dev-server": "^1.23.0",
-    "eslint": "^6.1.0",
-    "husky": "^1.0.0",
-    "lint-staged": "^8.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@open-wc/eslint-config",
-      "eslint-config-prettier"
-    ]
+    "@babel/core": "^7.26.0",
+    "@open-wc/eslint-config": "^12.0.3",
+    "@open-wc/prettier-config": "^1.1.0",
+    "@open-wc/testing": "^4.0.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^22.10.7",
+    "@types/resize-observer-browser": "^0.1.11",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.19.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-wc": "^2.2.0",
+    "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "madge": "^8.0.0",
+    "prettier": "^3.4.2",
+    "rimraf": "^4.0.0",
+    "sinon": "^15.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.7.3",
+    "vite": "^4.0.0"
   },
   "prettier": "@open-wc/prettier-config",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.js": [
+    "*.ts": [
       "eslint --fix",
-      "prettier --write",
       "git add"
     ]
   }
