--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.0.22",
+  "version": "1.0.23-alpha.1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
@@ -25,15 +25,15 @@
   "dependencies": {
     "@internetarchive/modal-manager": "^2.0.0",
     "@internetarchive/result-type": "^0.0.1",
-    "@internetarchive/search-service": "^1.4.1",
+    "@internetarchive/search-service": "2.0.0-alpha.1",
     "@internetarchive/user-service": "^0.1.3",
     "lit": "^2.8.0"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^9.0.0",
     "@open-wc/testing": "^4.0.0",
-    "@types/mocha": "^10.0.6",
     "@types/form-data": "^2.5.0",
+    "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@web/dev-server": "^0.4.0",
