Revert version bump

--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -39,7 +39,7 @@
     "@internetarchive/ia-activity-indicator": "^0.0.6",
     "@internetarchive/playback-controls": "0.0.2",
     "@internetarchive/scrubber-bar": "^0.0.2",
-    "@internetarchive/transcript-view": "0.0.4-alpha.1",
+    "@internetarchive/transcript-view": "^0.0.3",
     "@internetarchive/waveform-progress": "^0.0.2",
     "lit": "^2.8.0"
   },
