Refactoration and fixing glitches with fetch handler

--- a/packages/ia-pic-uploader/package.json
+++ b/packages/ia-pic-uploader/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "@internetarchive/ia-activity-indicator": "^0.0.6",
+    "@internetarchive/ia-styles": "1.0.0",
     "lit": "^2.8.0"
   }
 }
