--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "polymer-cli": "^1.9.11"
+  },
   "name": "iaux",
   "license": "AGPL-3.0-only",
   "devDependencies": {
-    "eslint": "^9.22.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.4"
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.3",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3"
   }
 }
