--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.0.24-wedev-7374.0",
+  "version": "1.0.23",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
