--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/setup-node@v4
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
 
     - name: Run tests
       run: yarn run test
