--- a/packages/ia-topnav/package.json
+++ b/packages/ia-topnav/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
