--- a/packages/ia-styles/package.json
+++ b/packages/ia-styles/package.json
@@ -79,7 +79,8 @@
           "ts": "never"
         }
       ]
-    }
+    },
+    "ignores": ["dist"]
   },
   "prettier": {
     "singleQuote": true,
