--- a/packages/ia-styles/package.json
+++ b/packages/ia-styles/package.json
@@ -25,61 +25,37 @@
     "lit": "^2.8.0"
   },
   "devDependencies": {
-    "@open-wc/eslint-config": "^9.0.0",
-    "@open-wc/testing": "^3.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "@types/express": "^4.17.9",
-    "@types/express-serve-static-core": "^4.17.21",
-    "@web/dev-server": "^0.1.32",
-    "@web/test-runner": "^0.15.0",
-    "concurrently": "^7.2.2",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-lit": "^1.7.2",
-    "eslint-plugin-lit-a11y": "^2.3.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-wc": "^1.3.2",
-    "gh-pages": "^5.0.0",
-    "madge": "^6.0.0",
-    "prettier": "^2.7.1",
-    "rimraf": "^4.0.0",
-    "sinon": "^15.0.0",
-    "ts-lit-plugin": "^1.2.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^4.0.0"
+    "@open-wc/eslint-config": "^12.0.3",
+    "@open-wc/testing": "^4.0.0",
+    "@types/mocha": "^10.0.10",
+    "@types/yargs": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.20.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-wc": "^2.2.0",
+    "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
+    "madge": "^8.0.0",
+    "nx": "20.8.0",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
+    "ts-lit-plugin": "^2.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "@open-wc",
-      "prettier"
-    ],
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "error",
-      "no-shadow": "off",
-      "@typescript-eslint/no-shadow": "error",
-      "class-methods-use-this": "off",
-      "import/no-unresolved": "off",
-      "import/extensions": [
-        "off",
-        "ignorePackages",
-        {
-          "js": "never",
-          "ts": "never"
-        }
-      ]
-    }
   },
   "prettier": {
     "singleQuote": true,
