ia-styles - extract unit test call & remove from main test command

--- a/packages/ia-styles/package.json
+++ b/packages/ia-styles/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . && prettier \"**/*.ts\" --check",
     "format": "eslint . --fix && prettier \"**/*.ts\" --write",
     "circular": "madge --circular --extensions ts .",
-    "test": "tsc && npm run lint && npm run circular && wtr --coverage --node-resolve dist/test/**/*.test.js",
+    "test": "tsc && npm run lint && npm run circular",
+    "test:unit": "tsc && wtr --coverage --node-resolve --config web-test-runner.config.mjs",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
     "ghpages:build": "rimraf ghpages && npm run prepare && vite build",
     "ghpages:publish": "npm run ghpages:prepare -e $(git branch --show-current)",
