--- a/packages/ia-topnav/package.json
+++ b/packages/ia-topnav/package.json
@@ -18,7 +18,7 @@
     "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint",
     "format": "npm run format:eslint && npm run format:prettier",
-    "test": "ulimit -v unlimited;  web-test-runner  'test/**/*.test.js' --node-resolve --coverage --puppeteer"
+    "test": ""
   },
   "dependencies": {
     "@internetarchive/ia-wayback-search": "0.2.5"
