--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         node-version: latest
 
     - name: Install dependencies
-      run: ../scripts/bootstrap.sh
+      run: ./scripts/bootstrap.sh
 
     - name: Run tests
-      run: ../scripts/test.sh
+      run: ./scripts/test.sh
 
     - name: Upload Codecov reports
       uses: codecov/codecov-action@main
