ia-userlist-settings - update dev deps to pass tests

--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ext .ts,.html . && prettier \"**/*.ts\" --check",
     "format": "eslint --ext .ts,.html . --fix && prettier \"**/*.ts\" --write",
     "circular": "madge --circular --extensions ts .",
-    "test": "tsc && yarn run format && yarn run lint && yarn run circular && wtr --coverage",
+    "test": "tsc && npm run format && npm run lint && npm run circular && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
     "publish:alpha": "npm run test && npm run prepare && npm version prerelease --preid alpha --no-git-tag-version && npm publish --tag alpha"
   },
@@ -32,28 +32,31 @@
   "devDependencies": {
     "@open-wc/eslint-config": "^12.0.3",
     "@open-wc/testing": "^4.0.0",
-    "@types/form-data": "^2.5.2",
     "@types/mocha": "^10.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@types/yargs": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.20.0",
     "concurrently": "^9.1.2",
-    "eslint": "^9.22.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lit": "^1.15.0",
     "eslint-plugin-lit-a11y": "^4.1.4",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-wc": "^2.2.1",
+    "eslint-plugin-wc": "^2.2.0",
+    "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
     "madge": "^8.0.0",
-    "prettier": "^3.5.3",
+    "nx": "20.8.0",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
-    "ts-lit-plugin": "^2.0.0",
+    "ts-lit-plugin": "^2.0.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public"
