--- a/packages/ia-topnav/tsconfig.json
+++ b/packages/ia-topnav/tsconfig.json
@@ -15,6 +15,7 @@
     "inlineSources": true,
     "rootDir": "./",
     "declaration": true,
+    "skipLibCheck": true,
     "plugins": [
       {
         "name": "ts-lit-plugin"
