--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@internetarchive/modal-manager": "^2.0.1",
     "@internetarchive/result-type": "^0.0.1",
-    "@internetarchive/search-service": "^2.2.1",
+    "@internetarchive/search-service": "^2.4.1-webdev-7558.3",
     "@internetarchive/user-service": "^1.0.0",
     "lit": "^2.8.0"
   },
