--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.1.2",
+  "version": "1.1.3-webdev-7743.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
